<resources>
	<string name="app_name">OpenSdkDemo</string>
	<string name="action_settings">Settings</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="comm_hint_exit">再按一次退出</string>
	<string name="loading">加载中...</string>
	<string name="tips">提示</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="send">发送</string>
	<string name="save">保存</string>
	<string name="date_format">yyyy年MM月dd日</string>

	<!--登录注册-->
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="account_username_hint">用户名</string>
	<string name="account_hint">手机/邮箱</string>
	<string name="account_pwd_hint">密码</string>
	<string name="account_verify_hint">验证码</string>
	<string name="get_verify_code">获取验证码</string>
	<string name="forget_password">忘记密码</string>
	<string name="reset_password">重置密码</string>
	<string name="resend_sms">点击重新获取</string>
	<string name="resend_sms_count">重新获取(%s)</string>
	<string name="input_hint">请输入内容</string>
	<string name="change_username">修改昵称</string>
	<string name="change_password_title">修改密码</string>
	<string name="current_pwd">当前密码</string>
	<string name="new_pwd1">新密码</string>
	<string name="new_pwd2">确认密码</string>

	<!--设备-->
	<string name="device_title">设备</string>
	<string name="device_info_title">设备信息</string>
	<string name="device_version_status">V1</string>
	<string name="device_unactived_status">未激活</string>
	<string name="device_online_status">在线</string>
	<string name="device_offline_status">离线</string>
	<string name="device_unbind_status">未绑定</string>
	<string name="device_empty_list">没有设备</string>
	<string name="device_empty_add">点击添加设备</string>
	<string name="device_sub_text">接收数据</string>
	<string name="device_pub_text">发送数据</string>
	<string name="device_wifi_config">配置设备</string>
	<string name="device_delete">删除设备，删除后将无法恢复</string>
	<string name="device_description">设备%1$s创建于%2$s</string>


	<string name="config_current_wifi">当前WiFi:</string>
	<string name="config_start">开始配置</string>
	<string name="config_config_running">配置中...</string>
	<string name="config_wifi_password_hint">WiFi密码</string>
	<string name="config_dev_name_hint">设备名称</string>
	<string name="config_dev_desc_hint">设备描述</string>


	<!--menu-->
	<string name="menu_device_add">添加设备</string>
	<string name="menu_device_bind">绑定设备</string>
	<string name="menu_qr_scan">扫一扫</string>
	<string name="menu_logout">退出登录</string>

	<string name="change_userinfo">修改用户信息</string>
	<string name="change_password">修改密码</string>
	<string name="refresh_token">刷新Token</string>

	<!--二维码-->
	<string name="qr_scan_text">将二维码放入框内, 即可自动扫描</string>
	<string name="qr_scan_err">不支持此类二维码</string>
	<string name="qr_id">二维码名片</string>
	<string name="qr_scan_title">扫描二维码</string>

	<!--成功提示-->
	<string name="suc_email_vldcode">验证码已发送到邮箱，请登录邮箱查收，完成注册</string>
	<string name="suc_phone_vldcode">验证码已发送到手机，请尽快完成注册</string>
	<string name="suc_reset_password">重置密码成功</string>
	<string name="suc_register_account">注册成功</string>
	<string name="suc_device_config">配置成功</string>
	<string name="suc_send">发送成功</string>
	<string name="suc_change">修改成功</string>
	<string name="suc_save">保存成功</string>
	<string name="suc_refresh">刷新成功</string>



	<!--错误提示-->
	<string name="err_username_empty">用户名不能为空</string>
	<string name="err_nickname_empty">昵称不能为空</string>
	<string name="err_account_empty">帐号不能为空</string>
	<string name="err_password_empty">密码不能为空</string>
	<string name="err_current_pwd_empty">当前密码不能为空</string>
	<string name="err_new_pwd_empty">新密码不能为空</string>
	<string name="err_vldcode_empty">验证码不能为空</string>
	<string name="err_ssid_empty">网络帐号不能为空</string>
	<string name="err_devname_empty">设备名称不能为空</string>
	<string name="err_devdesc_empty">设备描述不能为空</string>
	<string name="err_send">发送失败</string>

	<string name="err_tips">错误提示</string>
	<string name="err_login_expire">登陆过期，点击确认重新登陆</string>

	<string name="err_new_pwd_diff">新密码不一致</string>
	<string name="err_old_pwd_diff">新密码不能与旧密码相同</string>

	<string name="err_password_length_error">密码长度小于6</string>
	<string name="err_login_account">帐号或密码不正确</string>

	<string name="err_mqtt_connection">mqtt连接失败</string>

	<string-array name="device_menu">
		<item>设备信息</item>
		<item>删除</item>
	</string-array>

</resources>
