<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/vertical_margin"
	android:paddingLeft="@dimen/horizontal_margin"
	android:paddingRight="@dimen/horizontal_margin"
	android:paddingTop="@dimen/vertical_margin"
	android:orientation="vertical"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".ui.activity.LoginActivity"
	tools:showIn="@layout/activity_login">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/textinputAccount"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dip">

		<EditText
			android:id="@+id/editAccount"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/account_hint"
			style="@style/input_style"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/textinputPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dip">

		<EditText
			android:id="@+id/editPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/account_pwd_hint"
			android:inputType="textPassword"
			style="@style/input_style"/>
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/btnRegister"
		style="@style/btn_commit"
		android:layout_marginTop="50dip"
		android:text="@string/login"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp">
		<TextView
			android:id="@+id/btnToRegister"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="12dp"
			android:textSize="@dimen/body_text"
			android:layout_alignParentLeft="true"
			android:textColor="@color/colorAccent"
			android:text="@string/register"/>
		<TextView
			android:id="@+id/btnToForgetPwd"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:textSize="@dimen/body_text"
			android:padding="12dp"
			android:textColor="@color/colorAccent"
			android:text="@string/forget_password"/>
	</RelativeLayout>

</LinearLayout>
